--- a/itis3135/project_home.html
+++ b/itis3135/project_home.html
@@ -62,10 +62,31 @@
     }
 
     footer {
-      background-color: #003f2a;
-      text-align: center;
-      padding: 20px;
-    }
+  background-color: #003f2a;
+  color: white;
+  padding: 30px 20px;
+  text-align: center;
+  font-size: 0.95em;
+}
+
+.footer-contacts p {
+  margin: 5px 0;
+}
+
+.footer-contacts a {
+  color: white;
+  text-decoration: underline;
+}
+
+.footer-links {
+  margin: 15px 0;
+}
+
+.footer-links a {
+  color: white;
+  text-decoration: underline;
+  margin: 0 10px;
+}
 
     footer ul {
       list-style: none;
@@ -100,6 +121,7 @@
     .contact-info li {
       margin: 3px 0;
     }
+    
   </style>
 </head>
 <body>
@@ -136,24 +158,28 @@
   </main>
 
   <footer>
-    <div class="contact-info">
-        <ul>
-          <li><strong>Contacts:</strong></li>
-          <li><strong>Name:</strong> Charlotte Boxing Club</li>
-          <li><strong>Organization:</strong> Charlotte Boxing Club</li>
-          <li><strong>Email:</strong> CharlotteBoxing@Charlotte.edu</li>
-          <li><strong>Phone:</strong> 555-555-5555</li>
-        </ul>
-      </div>
-
-    <ul>
-      <li><a href="https://webpages.charlotte.edu/cyun2/">CLT Web</a></li>
-      <li><a href="https://github.com/hungry-bobby">GitHub</a></li>
-      <li><a href="https://www.linkedin.com/in/bobby-yun/">LinkedIn</a></li>
-    </ul>
+    <div class="footer-contacts">
+      <p><strong>Contacts:</strong></p>
+      <p>
+        <strong>Name:</strong> Charlotte Boxing Club &nbsp;|&nbsp;
+        <strong>Organization:</strong> Charlotte Boxing Club
+      </p>
+      <p>
+        <strong>Email:</strong> <a href="mailto:CharlotteBoxing@Charlotte.edu">CharlotteBoxing@Charlotte.edu</a> &nbsp;|&nbsp;
+        <strong>Phone:</strong> 555-555-5555
+      </p>
+    </div>
+  
+    <div class="footer-links">
+      <a href="https://webpages.charlotte.edu/cyun2/">CLT Web</a> |
+      <a href="https://github.com/hungry-bobby">GitHub</a> |
+      <a href="https://www.linkedin.com/in/bobby-yun/">LinkedIn</a>
+    </div>
+  
     <p>&copy; 2025 <a href="https://webpages.charlotte.edu/cyun2/bobbybuiltit.co/" target="_blank">BobbyBuiltIt.co</a></p>
     <p><em>“Built By Bobby.”</em></p>
   </footer>
+  
 
 </body>
 </html>
