--- a/itis3135/project_home.html
+++ b/itis3135/project_home.html
@@ -132,17 +132,12 @@
 
   <nav>
     <ul>
-      <li><a href="https://webpages.charlotte.edu/cyun2/">Home</a></li>
-      <li><a href="introduction.html">Introduction</a></li>
-      <li><a href="contract.html">Contract</a></li>
-      <li><a href="https://webpages.charlotte.edu/cyun2/ballsyyeti/">Whimsical Company</a></li>
-      <li><a href="https://webpages.charlotte.edu/cyun2/stuff/free%5EVBucks%5EHere.htm">CRAPPY Website</a></li>
-      <li><a href="website_evaluations.html">Website Evaluation</a></li>
-      <li><a href="https://webpages.charlotte.edu/cyun2/itis3135/tables.html">HTML Tables</a></li>
-      <li><a href="BYOintro.html">BYO Intro</a></li>
-      <li><a href="slideshow.html">Slideshow</a></li>
-      <li><a href="drawing.html">Drawing</a></li>
-      <li><a href="project_overview.html">Project Overview</a></li>
+      <li><a href="project_home.html">Home</a></li>
+      <li><a href="project_about.html">About</a></li>
+      <li><a href="project_schedule.html">Schedule</a></li>
+      <li><a href="project_leadership.html">Leadership</a></li>
+      <li><a href="project_epuipment.html">Equipment</a></li>
+      <li><a href="project_signup.html">Signup</a></li>
     </ul>
   </nav>
 
