--- a/itis3135/project_home.html
+++ b/itis3135/project_home.html
@@ -15,12 +15,21 @@
 
     header {
       text-align: center;
-      padding: 15px;
+      padding: 30px 15px 15px;
+    }
+
+    .logo-text {
+      font-size: 3.5em;
+      font-family: 'Impact', 'Arial Black', sans-serif;
+      color: white;
+      letter-spacing: 3px;
+      text-shadow: 2px 2px #003f2a;
+      text-transform: uppercase;
     }
 
     nav {
       background-color: #003f2a;
-      padding: 10px 0;
+      padding: 15px 0;
     }
 
     nav ul {
@@ -32,13 +41,13 @@
 
     nav ul li {
       display: inline;
-      margin: 0 15px;
+      margin: 0 25px;
     }
 
     nav ul li a {
       color: white;
       text-decoration: underline;
-      font-size: 1.5em; 
+      font-size: 2.5em; /* 3x bigger */
     }
 
     .hero-container {
@@ -62,30 +71,30 @@
     }
 
     footer {
-        background-color: #003f2a;
-        color: white;
-        padding: 30px 20px;
-        text-align: center;
-        font-size: 0.95em;
+      background-color: #003f2a;
+      color: white;
+      padding: 30px 20px;
+      text-align: center;
+      font-size: 0.95em;
     }
 
     .footer-contacts p {
-        margin: 5px 0;
+      margin: 5px 0;
     }
 
     .footer-contacts a {
-        color: white;
-        text-decoration: underline;
+      color: white;
+      text-decoration: underline;
     }
 
     .footer-links {
-        margin: 15px 0;
+      margin: 15px 0;
     }
 
     .footer-links a {
-        color: white;
-        text-decoration: underline;
-        margin: 0 10px;
+      color: white;
+      text-decoration: underline;
+      margin: 0 10px;
     }
 
     footer ul {
@@ -104,30 +113,12 @@
       color: white;
       text-decoration: underline;
     }
-
-    .contact-info {
-      margin-top: 10px;
-      font-size: 0.95em;
-    }
-
-    .contact-info ul {
-      list-style: none;
-      padding: 0;
-      margin: 0 auto;
-      max-width: 400px;
-      text-align: left;
-    }
-
-    .contact-info li {
-      margin: 3px 0;
-    }
-    
   </style>
 </head>
 <body>
 
   <header>
-    <h1>CHARLOTTE BOXING</h1>
+    <h1 class="logo-text">Charlotte Boxing Club</h1>
   </header>
 
   <nav>
@@ -154,27 +145,26 @@
 
   <footer>
     <div class="footer-contacts">
-      <p><strong>Contacts:</strong></p>
+      <p><strong>Contacts</strong></p>
       <p>
-        <strong>Name:</strong> Charlotte Boxing Club &nbsp;|&nbsp;
+        <strong>Name:</strong> Charlotte Boxing Club<br>
         <strong>Organization:</strong> Charlotte Boxing Club
       </p>
       <p>
-        <strong>Email:</strong> <a href="mailto:CharlotteBoxing@Charlotte.edu">CharlotteBoxing@Charlotte.edu</a> &nbsp;|&nbsp;
+        <strong>Email:</strong> <a href="mailto:CharlotteBoxing@Charlotte.edu">CharlotteBoxing@Charlotte.edu</a><br>
         <strong>Phone:</strong> 555-555-5555
       </p>
     </div>
-  
+
     <div class="footer-links">
       <a href="https://webpages.charlotte.edu/cyun2/">CLT Web</a> |
       <a href="https://github.com/hungry-bobby">GitHub</a> |
       <a href="https://www.linkedin.com/in/bobby-yun/">LinkedIn</a>
     </div>
-  
+
     <p>&copy; 2025 <a href="https://webpages.charlotte.edu/cyun2/bobbybuiltit.co/" target="_blank">BobbyBuiltIt.co</a></p>
     <p><em>“Built By Bobby.”</em></p>
   </footer>
-  
 
 </body>
 </html>
