--- a/itis3135/project_home.html
+++ b/itis3135/project_home.html
@@ -15,21 +15,12 @@
 
     header {
       text-align: center;
-      padding: 30px 15px 15px;
-    }
-
-    .logo-text {
-      font-size: 3.5em;
-      font-family: 'Impact', 'Arial Black', sans-serif;
-      color: white;
-      letter-spacing: 4px;
-      text-shadow: 1px 1px #003f2a;
-      text-transform: uppercase;
+      padding: 15px;
     }
 
     nav {
       background-color: #003f2a;
-      padding: 15px 0;
+      padding: 10px 0;
     }
 
     nav ul {
@@ -41,13 +32,13 @@
 
     nav ul li {
       display: inline;
-      margin: 0 25px;
+      margin: 0 15px;
     }
 
     nav ul li a {
       color: white;
       text-decoration: underline;
-      font-size: 1em; /* 3x bigger */
+      font-size: 1.5em; 
     }
 
     .hero-container {
@@ -71,30 +62,30 @@
     }
 
     footer {
-      background-color: #003f2a;
-      color: white;
-      padding: 30px 20px;
-      text-align: center;
-      font-size: 0.95em;
+        background-color: #003f2a;
+        color: white;
+        padding: 30px 20px;
+        text-align: center;
+        font-size: 0.95em;
     }
 
     .footer-contacts p {
-      margin: 5px 0;
+        margin: 5px 0;
     }
 
     .footer-contacts a {
-      color: white;
-      text-decoration: underline;
+         color: white;
+        text-decoration: underline;
     }
 
     .footer-links {
-      margin: 15px 0;
+        margin: 15px 0;
     }
 
     .footer-links a {
-      color: white;
-      text-decoration: underline;
-      margin: 0 10px;
+        color: white;
+        text-decoration: underline;
+        margin: 0 10px;
     }
 
     footer ul {
@@ -113,22 +104,45 @@
       color: white;
       text-decoration: underline;
     }
+
+    .contact-info {
+      margin-top: 10px;
+      font-size: 0.95em;
+    }
+
+    .contact-info ul {
+      list-style: none;
+      padding: 0;
+      margin: 0 auto;
+      max-width: 400px;
+      text-align: left;
+    }
+
+    .contact-info li {
+      margin: 3px 0;
+    }
+    
   </style>
 </head>
 <body>
 
   <header>
-    <h1 class="logo-text">Charlotte Boxing Club</h1>
+    <h1>Bobby Yun’s Ballsy Yeti ITIS3135</h1>
   </header>
 
   <nav>
     <ul>
-      <li><a href="project_home.html">Home</a></li>
-      <li><a href="project_about.html">About</a></li>
-      <li><a href="project_schedule.html">Schedule</a></li>
-      <li><a href="project_leadership.html">Leadership</a></li>
-      <li><a href="project_epuipment.html">Equipment</a></li>
-      <li><a href="project_signup.html">Signup</a></li>
+      <li><a href="https://webpages.charlotte.edu/cyun2/">Home</a></li>
+      <li><a href="introduction.html">Introduction</a></li>
+      <li><a href="contract.html">Contract</a></li>
+      <li><a href="https://webpages.charlotte.edu/cyun2/ballsyyeti/">Whimsical Company</a></li>
+      <li><a href="https://webpages.charlotte.edu/cyun2/stuff/free%5EVBucks%5EHere.htm">CRAPPY Website</a></li>
+      <li><a href="website_evaluations.html">Website Evaluation</a></li>
+      <li><a href="https://webpages.charlotte.edu/cyun2/itis3135/tables.html">HTML Tables</a></li>
+      <li><a href="BYOintro.html">BYO Intro</a></li>
+      <li><a href="slideshow.html">Slideshow</a></li>
+      <li><a href="drawing.html">Drawing</a></li>
+      <li><a href="project_overview.html">Project Overview</a></li>
     </ul>
   </nav>
 
@@ -145,26 +159,27 @@
 
   <footer>
     <div class="footer-contacts">
-      <p><strong>Contacts</strong></p>
+      <p><strong>Contacts:</strong></p>
       <p>
-        <strong>Name:</strong> Charlotte Boxing Club<br>
+        <strong>Name:</strong> Charlotte Boxing Club &nbsp;|&nbsp;
         <strong>Organization:</strong> Charlotte Boxing Club
       </p>
       <p>
-        <strong>Email:</strong> <a href="mailto:CharlotteBoxing@Charlotte.edu">CharlotteBoxing@Charlotte.edu</a><br>
+        <strong>Email:</strong> <a href="mailto:CharlotteBoxing@Charlotte.edu">CharlotteBoxing@Charlotte.edu</a> &nbsp;|&nbsp;
         <strong>Phone:</strong> 555-555-5555
       </p>
     </div>
-
+  
     <div class="footer-links">
       <a href="https://webpages.charlotte.edu/cyun2/">CLT Web</a> |
       <a href="https://github.com/hungry-bobby">GitHub</a> |
       <a href="https://www.linkedin.com/in/bobby-yun/">LinkedIn</a>
     </div>
-
+  
     <p>&copy; 2025 <a href="https://webpages.charlotte.edu/cyun2/bobbybuiltit.co/" target="_blank">BobbyBuiltIt.co</a></p>
     <p><em>“Built By Bobby.”</em></p>
   </footer>
+  
 
 </body>
 </html>
