--- a/itis3135/project_home.html
+++ b/itis3135/project_home.html
@@ -15,12 +15,21 @@
 
     header {
       text-align: center;
-      padding: 15px;
+      padding: 30px 15px 15px;
+    }
+
+    .logo-text {
+      font-size: 3.5em;
+      font-family: 'Impact', 'Arial Black', sans-serif;
+      color: white;
+      letter-spacing: 4px;
+      text-shadow: 1px 1px #003f2a;
+      text-transform: uppercase;
     }
 
     nav {
       background-color: #003f2a;
-      padding: 10px 0;
+      padding: 15px 0;
     }
 
     nav ul {
@@ -32,13 +41,13 @@
 
     nav ul li {
       display: inline;
-      margin: 0 15px;
+      margin: 0 25px;
     }
 
     nav ul li a {
       color: white;
       text-decoration: underline;
-      font-size: 1.5em; 
+      font-size: 1em; /* 3x bigger */
     }
 
     .hero-container {
@@ -62,30 +71,30 @@
     }
 
     footer {
-        background-color: #003f2a;
-        color: white;
-        padding: 30px 20px;
-        text-align: center;
-        font-size: 0.95em;
+      background-color: #003f2a;
+      color: white;
+      padding: 30px 20px;
+      text-align: center;
+      font-size: 0.95em;
     }
 
     .footer-contacts p {
-        margin: 5px 0;
+      margin: 5px 0;
     }
 
     .footer-contacts a {
-         color: white;
-        text-decoration: underline;
+      color: white;
+      text-decoration: underline;
     }
 
     .footer-links {
-        margin: 15px 0;
+      margin: 15px 0;
     }
 
     .footer-links a {
-        color: white;
-        text-decoration: underline;
-        margin: 0 10px;
+      color: white;
+      text-decoration: underline;
+      margin: 0 10px;
     }
 
     footer ul {
@@ -104,45 +113,22 @@
       color: white;
       text-decoration: underline;
     }
-
-    .contact-info {
-      margin-top: 10px;
-      font-size: 0.95em;
-    }
-
-    .contact-info ul {
-      list-style: none;
-      padding: 0;
-      margin: 0 auto;
-      max-width: 400px;
-      text-align: left;
-    }
-
-    .contact-info li {
-      margin: 3px 0;
-    }
-    
   </style>
 </head>
 <body>
 
   <header>
-    <h1>Bobby Yun’s Ballsy Yeti ITIS3135</h1>
+    <h1 class="logo-text">Charlotte Boxing Club</h1>
   </header>
 
   <nav>
     <ul>
-      <li><a href="https://webpages.charlotte.edu/cyun2/">Home</a></li>
-      <li><a href="introduction.html">Introduction</a></li>
-      <li><a href="contract.html">Contract</a></li>
-      <li><a href="https://webpages.charlotte.edu/cyun2/ballsyyeti/">Whimsical Company</a></li>
-      <li><a href="https://webpages.charlotte.edu/cyun2/stuff/free%5EVBucks%5EHere.htm">CRAPPY Website</a></li>
-      <li><a href="website_evaluations.html">Website Evaluation</a></li>
-      <li><a href="https://webpages.charlotte.edu/cyun2/itis3135/tables.html">HTML Tables</a></li>
-      <li><a href="BYOintro.html">BYO Intro</a></li>
-      <li><a href="slideshow.html">Slideshow</a></li>
-      <li><a href="drawing.html">Drawing</a></li>
-      <li><a href="project_overview.html">Project Overview</a></li>
+      <li><a href="project_home.html">Home</a></li>
+      <li><a href="project_about.html">About</a></li>
+      <li><a href="project_schedule.html">Schedule</a></li>
+      <li><a href="project_leadership.html">Leadership</a></li>
+      <li><a href="project_epuipment.html">Equipment</a></li>
+      <li><a href="project_signup.html">Signup</a></li>
     </ul>
   </nav>
 
@@ -179,7 +165,6 @@
     <p>&copy; 2025 <a href="https://webpages.charlotte.edu/cyun2/bobbybuiltit.co/" target="_blank">BobbyBuiltIt.co</a></p>
     <p><em>“Built By Bobby.”</em></p>
   </footer>
-  
 
 </body>
 </html>
