--- a/itis3135/project_about.html
+++ b/itis3135/project_about.html
@@ -145,23 +145,23 @@
 
   <footer>
     <div class="footer-contacts">
-      <p><strong>Contacts</strong></p>
+      <p><strong>Contacts:</strong></p>
       <p>
-        <strong>Name:</strong> Charlotte Boxing Club<br>
+        <strong>Name:</strong> Charlotte Boxing Club &nbsp;|&nbsp;
         <strong>Organization:</strong> Charlotte Boxing Club
       </p>
       <p>
-        <strong>Email:</strong> <a href="mailto:CharlotteBoxing@Charlotte.edu">CharlotteBoxing@Charlotte.edu</a><br>
+        <strong>Email:</strong> <a href="mailto:CharlotteBoxing@Charlotte.edu">CharlotteBoxing@Charlotte.edu</a> &nbsp;|&nbsp;
         <strong>Phone:</strong> 555-555-5555
       </p>
     </div>
-
+  
     <div class="footer-links">
       <a href="https://webpages.charlotte.edu/cyun2/">CLT Web</a> |
       <a href="https://github.com/hungry-bobby">GitHub</a> |
       <a href="https://www.linkedin.com/in/bobby-yun/">LinkedIn</a>
     </div>
-
+  
     <p>&copy; 2025 <a href="https://webpages.charlotte.edu/cyun2/bobbybuiltit.co/" target="_blank">BobbyBuiltIt.co</a></p>
     <p><em>“Built By Bobby.”</em></p>
   </footer>
