--- a/itis3135/project_epuipment.html
+++ b/itis3135/project_epuipment.html
@@ -78,6 +78,12 @@
       font-size: 0.95em;
     }
 
+    footer a {
+        color: white;
+        text-decoration: underline;
+    }
+
+
     .footer-contacts p {
       margin: 5px 0;
     }
