--- a/itis3135/project_epuipment.html
+++ b/itis3135/project_epuipment.html
@@ -139,10 +139,10 @@
       <p>Rental gear must be kept clean and returned in good condition</p>
 
       <h3>Recommended Shopping Links</h3>
-      <a class="white-link" href="https://www.amazon.com/s?k=16oz+boxing+gloves" target="_blank">Amazon – 16oz Gloves</a>
-      <a class="white-link" href="https://www.amazon.com/s?k=boxing+hand+wraps+180+inch" target="_blank">Amazon – Hand Wraps</a>
-      <a class="white-link" href="https://www.amazon.com/s?k=boxing+headgear" target="_blank">Amazon – Headgear</a>
-      <a class="white-link" href="https://www.amazon.com/s?k=boxing+shoes" target="_blank">Amazon – Boxing Shoes</a>
+      <a class="white-link" href="https://www.amazon.com/Sanabul-Essential-Kickboxing-Training-Sparring/dp/B01D2J42ZO/ref=sxin_17_sbv_search_btf?content-id=amzn1.sym.7032aefd-3c59-4a1e-aaf4-8d3a944207a4%3Aamzn1.sym.7032aefd-3c59-4a1e-aaf4-8d3a944207a4&cv_ct_cx=16oz+boxing+gloves&keywords=16oz+boxing+gloves&pd_rd_i=B01D2J42ZO&pd_rd_r=6a7afa04-7f51-45c4-ac55-88097466c5e4&pd_rd_w=Q1UeF&pd_rd_wg=XHJaS&pf_rd_p=7032aefd-3c59-4a1e-aaf4-8d3a944207a4&pf_rd_r=WM30F1S2668AG8T0ZWAB&qid=1746075533&sbo=RZvfv%2F%2FHxDF%2BO5021pAnSA%3D%3D&sr=1-1-5190daf0-67e3-427c-bea6-c72c1df98776" target="_blank">Amazon – 16oz Gloves</a>
+      <a class="white-link" href="https://www.amazon.com/Sanabul-Elastic-Professional-Handwraps-Kickboxing/dp/B01APTGJYG/ref=sr_1_1_sspa?dib=eyJ2IjoiMSJ9.Xro3ONDKc9BwJlSaT9P3HohhAtrMmXFKe_DzWcQTSAm5bzD9iOofJ1wuLnbDGcGG2Li-j7QU_HZcyvUCcTFIzU75uQeeoOtEH7ew7zJ3FHdBiXCJWPE0toSDYtPEU6JmMfFb079tSwRZ6icGnuvsYYX_33Vquzg6lsOpQAdFgleDXEJElsr_ls0dzCaQMQkUcsjP0HA74eYRjQXpTbQlv79nyunvHS_VIGfbBMoqunWwTUqC-_qfOf7MM7zlb2p0lLmqNsOfQx_SbvvKJC3Zg6OMY1TyPI8_VecTO5r2EBg.kko96KfFOW65Dd3FqbvnbCqvjSc9iTBZgGToCenOQCM&dib_tag=se&keywords=boxing+hand+wraps+180+inch&qid=1746075533&sr=8-1-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY&psc=1" target="_blank">Amazon – Hand Wraps</a>
+      <a class="white-link" href="https://www.amazon.com/Sanabul-Essential-Boxing-Kickboxing-Black/dp/B075G7JB9R/ref=sr_1_1_sspa?dib=eyJ2IjoiMSJ9.FeTLc05TvrlYNbXYm6G_0L6Ui8_tKJFoFx5HEuNreiinEG_AeQWiTkHNb6MyufLHWjR34WfuZjxoQBU_0om779g9qNiXBWd2LPE8VmvdcPJLA8e2wIY63E4s46xFFa7LjrWKF4btm8NeP60ZO93lWisYg43oH1HrfZZ7vjwGkqUJGAReqos0UJXPv-n-bApPzR5SLkVY8hy9SqYfIsWmcgkjMIOQRGjtR4ouJaLOoA6xhhR8UdkZzpU_0SrYpyXoT83u7uH9f508oOmNF15MdFqCt5VcHzfz9Y1wNTI5Su0.wynVmjGiAoSUp-xMCRfUOmNmas3yKIPHqjQuHSakhHI&dib_tag=se&keywords=boxing+headgear&qid=1746075535&sr=8-1-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY&psc=1" target="_blank">Amazon – Headgear</a>
+      <a class="white-link" href="https://www.amazon.com/dp/B0D7RSVXKM?ref_=ppx_hzsearch_conn_dt_b_fed_asin_title_8&th=1&psc=1" target="_blank">Amazon – Boxing Shoes</a>
 
       <h3>Notes</h3>
       <p>New members don’t need all their own gear to start. Just bring water and workout clothes—we’ll help you gear up as needed!</p>
