--- a/itis3135/project_signup.html
+++ b/itis3135/project_signup.html
@@ -176,7 +176,7 @@
 
       <label>
         <input type="checkbox" required>
-        I agree to the <a href="#">risk and conduct policy</a>.
+        I agree to the <a href="risk.html">risk and conduct policy</a>.
       </label>
 
       <input type="submit" value="Register">
