--- a/itis3135/project_overview.html
+++ b/itis3135/project_overview.html
@@ -80,6 +80,7 @@
         <li><a href="https://webpages.charlotte.edu/cyun2/">Home</a></li>
         <li><a href="introduction.html">Introduction</a></li>
         <li><a href="contract.html">Contract</a></li>
+        <li><a href="https://webpages.charlotte.edu/cyun2/bobbybuiltit.co/">BobbyBuiltIt.co</a></li>
         <li><a href="https://webpages.charlotte.edu/cyun2/ballsyyeti/">Whimsical Company</a></li>
         <li><a href="https://webpages.charlotte.edu/cyun2/stuff/free%5EVBucks%5EHere.htm">CRAPPY Website</a></li>
         <li><a href="website_evaluations.html">Website Evaluation</a></li>
@@ -88,6 +89,7 @@
         <li><a href="slideshow.html">Slideshow</a></li>
         <li><a href="drawing.html">Drawing</a></li>
         <li><a href="project_overview.html">Project Overview</a></li>
+        <li><a href="project_home.html">Client Website</a></li>
       </ul>
     </ul>
   </nav>
