--- a/itis3135/BYOintro.html
+++ b/itis3135/BYOintro.html
@@ -124,7 +124,7 @@
       <li><a href="https://github.com/hungry-bobby">GitHub</a></li>
       <li><a href="https://www.linkedin.com/in/bobby-yun/">LinkedIn</a></li>
     </ul>
-    <p>&copy; 2025 <a href="https://webpages.charlotte.edu/cyun2/bobbybuiltit.co/" target="_blank">BobbyBuiltIt.co</a></p>
+    <p>&copy; 2025 <a href="https://webpages.charlotte.edu/cyun2/bobbybuiltit.co/" target="_blank" rel="noopener noreferrer">BobbyBuiltIt.co</a></p>
     <p><em>“Built By Bobby.”</em></p>
     <p>
       <a id="validation_link_html">HTML Validation</a> |
