--- a/itis3135/comonents/footer.html
+++ b/itis3135/comonents/footer.html
@@ -1,14 +1,13 @@
 <footer>
-    <ul>
-      <li><a href="https://webpages.charlotte.edu/cyun2/">CLT Web</a></li>
-      <li><a href="https://github.com/hungry-bobby">GitHub</a></li>
-      <li><a href="https://www.linkedin.com/in/bobby-yun/">LinkedIn</a></li>
-    </ul>
-    <p>&copy; 2025 <a href="https://webpages.charlotte.edu/cyun2/bobbybuiltit.co/" target="_blank" rel="noopener noreferrer">BobbyBuiltIt.co</a></p>
-    <p><em>“Built By Bobby.”</em></p>
-    <p>
-      <a id="validation_link_html">HTML Validation</a> |
-      <a id="validation_link_css">CSS Validation</a>
-    </p>
-  </footer>
-  
+  <ul>
+    <li><a href="https://webpages.charlotte.edu/cyun2/">CLT Web</a></li>
+    <li><a href="https://github.com/hungry-bobby">GitHub</a></li>
+    <li><a href="https://www.linkedin.com/in/bobby-yun/">LinkedIn</a></li>
+  </ul>
+  <p>&copy; 2025 <a href="https://webpages.charlotte.edu/cyun2/bobbybuiltit.co/" target="_blank" rel="noopener noreferrer">BobbyBuiltIt.co</a></p>
+  <p><em>“Built By Bobby.”</em></p>
+  <p>
+    <a href="https://www.freecodecamp.org/certification/BobbyYun/responsive-web-design/">Responsive Web Design Certification</a> |
+    <a href="https://www.freecodecamp.org/certification/BobbyYun/javascript-algorithms-and-data-structures-v8/">JADS Certification</a>
+  </p>
+</footer>
