--- a/itis3135/BYOintro.html
+++ b/itis3135/BYOintro.html
@@ -127,8 +127,8 @@
     <p>&copy; 2025 <a href="https://webpages.charlotte.edu/cyun2/bobbybuiltit.co/" target="_blank" rel="noopener noreferrer">BobbyBuiltIt.co</a></p>
     <p><em>“Built By Bobby.”</em></p>
     <p>
-      <a id="validation_link_html">HTML Validation</a> |
-      <a id="validation_link_css">CSS Validation</a>
+      <a href="https://www.freecodecamp.org/certification/BobbyYun/responsive-web-design/">Responsive Web Design Certification</a> |
+      <a href="https://www.freecodecamp.org/certification/BobbyYun/javascript-algorithms-and-data-structures-v8/">JADS Certification</a>
     </p>
   </footer>
 </body>
