--- a/itis3135/BYOintro.html
+++ b/itis3135/BYOintro.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>BYO Introduction</title>
   <link rel="stylesheet" href="styles/default.css" />
-  <script src="scripts/survey.js" defer></script>
+  <script src="survey_fixed.js" defer></script>
   <style>
     form {
       width: 60%;
@@ -20,7 +20,7 @@
     input[type="text"],
     input[type="file"] {
       width: 100%;
-      padding: 0.4em;
+      padding: 0.4em
     }
     fieldset {
       border: 1px solid #333;
@@ -29,6 +29,15 @@
     .course {
       margin-bottom: 1em;
     }
+    .output {
+      background-color: #e5ffe5;
+      color: black;
+      padding: 20px;
+      margin-top: 40px;
+      width: 60%;
+      margin-left: auto;
+      margin-right: auto;
+    }
   </style>
 </head>
 <body>
@@ -36,27 +45,9 @@
     <h1>Bobby Yun’s Ballsy Yeti ITIS3135</h1>
   </header>
 
-  <nav>
-    <ul>
-      <li><a href="https://webpages.charlotte.edu/cyun2/">Home</a></li>
-      <li><a href="introduction.html">Introduction</a></li>
-      <li><a href="contract.html">Contract</a></li>
-      <li><a href="https://webpages.charlotte.edu/cyun2/bobbybuiltit.co/">BobbyBuiltIt.co</a></li>
-      <li><a href="https://webpages.charlotte.edu/cyun2/ballsyyeti/">Whimsical Company</a></li>
-      <li><a href="https://webpages.charlotte.edu/cyun2/stuff/free%5EVBucks%5EHere.htm">CRAPPY Website</a></li>
-      <li><a href="website_evaluations.html">Website Evaluation</a></li>
-      <li><a href="https://webpages.charlotte.edu/cyun2/itis3135/tables.html">HTML Tables</a></li>
-      <li><a href="BYOintro.html">BYO Intro</a></li>
-      <li><a href="slideshow.html">Slideshow</a></li>
-      <li><a href="drawing.html">Drawing</a></li>
-      <li><a href="project_overview.html">Project Overview</a></li>
-      <li><a href="project_home.html">Client Website</a></li>
-    </ul>
-  </nav>
-
   <main>
     <h2>BYO Introduction</h2>
-    <p>Time to build your own Intro page, please fill out the form below so we can create your own page.</p>
+    <p>Fill out the form below to generate your intro content.</p>
 
     <form id="introForm">
       <fieldset>
@@ -107,7 +98,7 @@
         <legend>Consent</legend>
         <label>
           <input type="checkbox" required />
-          "I understand that what is on this page is not password protected and I will not put anything here that I don’t want publicly available."
+          "I understand this is not password protected and will not post anything private."
         </label>
       </fieldset>
 
@@ -116,20 +107,8 @@
         <input type="reset" value="Reset" />
       </div>
     </form>
-  </main>
 
-  <footer>
-    <ul>
-      <li><a href="https://webpages.charlotte.edu/cyun2/">CLT Web</a></li>
-      <li><a href="https://github.com/hungry-bobby">GitHub</a></li>
-      <li><a href="https://www.linkedin.com/in/bobby-yun/">LinkedIn</a></li>
-    </ul>
-    <p>&copy; 2025 <a href="https://webpages.charlotte.edu/cyun2/bobbybuiltit.co/" target="_blank" rel="noopener noreferrer">BobbyBuiltIt.co</a></p>
-    <p><em>“Built By Bobby.”</em></p>
-    <p>
-      <a href="https://www.freecodecamp.org/certification/BobbyYun/responsive-web-design/">Responsive Web Design Certification</a> |
-      <a href="https://www.freecodecamp.org/certification/BobbyYun/javascript-algorithms-and-data-structures-v8/">JADS Certification</a>
-    </p>
-  </footer>
+    <div class="output" id="introOutput"></div>
+  </main>
 </body>
 </html>
